--- a/package.json
+++ b/package.json
@@ -2,31 +2,32 @@
   "scripts": {
     "build": "npx hardhat compile",
     "test": "npx hardhat test",
-    "deploy-test":"npx hardhat run ./scripts/deploy.ts --network inEVMtest"
+    "clean": "npx hardhat clean",
+    "deploy-test": "npx hardhat run ./scripts/deploy.ts --network inEVMtest"
   },
-  "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+  "dependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.6",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
     "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.5",
     "@openzeppelin/contracts": "^5.0.2",
-    "@typechain/ethers-v6": "^0.5.0",
-    "@typechain/hardhat": "^9.0.0",
-    "@types/chai": "^4.2.0",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@typechain/hardhat": "^9.1.0",
+    "@types/chai": "^4.3.14",
     "@types/dotenv": "^8.2.0",
-    "@types/mocha": ">=9.1.0",
-    "@types/node": ">=18.0.0",
-    "chai": "^4.2.0",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.12.4",
+    "chai": "^4.4.1",
     "dotenv": "^16.4.5",
-    "ethers": "^6.4.0",
+    "ethers": "^6.11.1",
     "hardhat": "^2.22.2",
-    "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.8.0",
-    "ts-node": ">=8.0.0",
-    "typechain": "^8.3.0",
-    "typescript": ">=4.5.0"
+    "hardhat-gas-reporter": "^2.1.0",
+    "solidity-coverage": "^0.8.11",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
+    "typescript": "^5.4.3"
   }
 }
